# Huffman

./: BitStream.cpp  BitStream.hpp  CMakeLists.txt  EncodingAfter.txt  EncodingBefore.txt  Example.hpp  FrequencyCounter.cpp  FrequencyCounter.hpp  HuffmanTree.cpp  HuffmanTree.hpp  MontyPythonandtheHolyGrail.txt  README.md  a.out  euro.txt  main  main.cpp  makefile  util.cpp  util.hpp
test/: BitStreamTests.cpp  CMakeLists.txt  FrequencyCounterTests.cpp  HuffmanTreeTest.cpp  test.txt
